--- a/Twitter.UI/Twitter.UI.csproj
+++ b/Twitter.UI/Twitter.UI.csproj
@@ -8,6 +8,7 @@
 
 
 	<ItemGroup>
+		<PackageReference Include="DocumentFormat.OpenXml" Version="2.20.0" />
 		<PackageReference Include="EPPlus" Version="6.2.7" />
 		<PackageReference Include="Google.Apis" Version="1.61.0" />
 		<PackageReference Include="Google.Apis.Auth" Version="1.61.0" />
@@ -22,6 +23,7 @@
 		<PackageReference Include="Microsoft.Graph" Version="5.19.0" />
 		<PackageReference Include="Microsoft.Graph.Core" Version="3.0.9" />
 		<PackageReference Include="Microsoft.Identity.Client" Version="4.54.1" />
+		<PackageReference Include="Microsoft.Office.Interop.Word" Version="15.0.4797.1004" />
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.15" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="NonFactors.Grid.Mvc6" Version="7.2.0" />
