--- a/Twitter.UI/Twitter.UI.csproj
+++ b/Twitter.UI/Twitter.UI.csproj
@@ -15,6 +15,7 @@
 		<PackageReference Include="Google.Apis.Core" Version="1.61.0" />
 		<PackageReference Include="Google.Apis.Sheets.v4" Version="1.61.0.3113" />
 		<PackageReference Include="iTextSharp" Version="5.5.13.3" />
+		<PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.2.9" />
 		<PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
 			<PrivateAssets>all</PrivateAssets>
@@ -23,6 +24,7 @@
 		<PackageReference Include="Microsoft.Graph" Version="5.19.0" />
 		<PackageReference Include="Microsoft.Graph.Core" Version="3.0.9" />
 		<PackageReference Include="Microsoft.Identity.Client" Version="4.54.1" />
+		<PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1001" />
 		<PackageReference Include="Microsoft.Office.Interop.Word" Version="15.0.4797.1004" />
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.15" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
