--- a/Twitter.UI/Twitter.UI.csproj
+++ b/Twitter.UI/Twitter.UI.csproj
@@ -14,6 +14,7 @@
 		<PackageReference Include="Google.Apis.Auth" Version="1.61.0" />
 		<PackageReference Include="Google.Apis.Core" Version="1.61.0" />
 		<PackageReference Include="Google.Apis.Sheets.v4" Version="1.61.0.3113" />
+		<PackageReference Include="itext7" Version="7.2.5" />
 		<PackageReference Include="iTextSharp" Version="5.5.13.3" />
 		<PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.2.9" />
 		<PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
@@ -40,6 +41,10 @@
 		<None Update="google-credentials.json">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="PdfFiles\" />
 	</ItemGroup>
 
 	
